# Roblox-Client-Optimizer

./: ClientAppSettings.json
.github/workflows/: build.yml
LibRCO3/: package.json  pnpm-lock.yaml  tsconfig.json
LibRCO3/src/: Flags.ts  Roblox.ts
RBX2Appdata/: .gitignore  Cargo.toml  README.md  apply-manifest.bat
RBX2Appdata/src/: main.rs
RCO3/: .gitignore  README.md  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.json
RCO3/src/: config.ts  index.ts
RCO3Installer/: build-nexe.js  package.json  pnpm-lock.yaml
RCO3Installer/src/: Installer.ts  index.ts
RCO3Launcher/: .gitignore  Cargo.toml  README.md  build.js  build.rs  build.sh  main.go
RCO3Launcher/metadata/: index.js  meme-exe.json  memes.json  package.json  pnpm-lock.yaml
RCO3Launcher/src/: main.rs
RCO3WinNativeBindings/: README.md  binding.gyp  winapi.cc
RCOWinAPI/: README.md  binding.gyp
Source/rco/: index.js  indexU.js  package-lock.json  package.json
Source/rcoinstaller/: installer.js  package-lock.json  package.json
assets/: ClientAppSettings.json  files.json  hosts
rco-site/src/routes/: +page.svelte
test/: package.json  pnpm-lock.yaml
