[package]
name = "rco3launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json"] }

[[bin]]
name = "rco3launcher"
path = "src/main.rs"

[package.metadata]
icons = [
  { file = "icon.png", target = "linux" },
  { file = "icon.ico", target = "windows" },
  { file = "icon.png", target = "macos" },
]

[package.metadata.winres]
icon = "icon.ico"
