[package]
name = "rco3launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
proctitle = { version = "0.1.1" }
notify = "6.0.0"
winapi = { version = "0.3.9", target = ["x86_64-pc-windows-msvc"] }

[[bin]]
name = "rco3launcher"
path = "src/main.rs"

[package.metadata]
icons = [
  { file = "icon.png", target = "linux" },
  { file = "icon.ico", target = "windows" },
  { file = "icon.png", target = "macos" },
]

[package.metadata.winres]
icon = "icon.ico"
